--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="de">
+<!--Das ist wirklich meine erste Webseite -->
+  <head>
+    <title>Meine erste Webseite</title>
+  </head>
+  <body>
+    <h1>Dies ist meine erste Überschrift</h1>
+    <p>Hallo Webwelt!</p>
+  </body>
+</html>
