--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="de">
-<!--Das ist wirklich meine erste Webseite -->
-  <head>
-    <title>Meine erste Webseite</title>
-  </head>
-  <body>
-    <h1>Dies ist meine erste Überschrift</h1>
-    <p>Hallo Webwelt!</p>
-  </body>
+<html>
+<head>
+<meta charset=utf-8 />
+<title>PROshop</title>
+<link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
+<script type="text/javascript" src="tools/jquery.min.js"></script> 
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+
+</head>
+<body>
+<div class="black"></div>
+<div id="wrapper">
+	<div id="header">
+		<h1>PROject Shopfitting</h1>
+		<h2><strong class="sep-one"></strong>Integrierte Leistungen - Hoher Kundennutzen<strong class="sep-two"></strong></h2>
+	</div>
+	<div id="middle">
+		<p>PROject PÜHRINGER BISTEGHI HAUER GmbH mit Sitz in Wien und Engerwitzdorf (Linz) arbeitet seit 1995 mit Erfolg in der Beratung, Planung und Realisierung von Organisations- und Investitionsvorhaben.</p> 
+		<p><span>Dies wird die <b>neue Website</b> für das <b>Projektmanagement Shopfitting</b></span></p>
+	</div>
+	<div id="footer">
+		<div>
+		<ul class="middle">
+			<p>PROject Pühringer Bisteghi Hauer GmbH Planung und Baumanagement</p>
+			<p>Standort Wien:
+			Satzberggasse 15/6
+			1140 Wien
+			Tel. +43 (0) 1 / 876 95 99
+			Fax +43 (0) 1 / 876 95 99 – 20
+			Email office.wien@project.co.at
+			</p>
+			<p>Standort Engerwitzdorf:
+			Klammstraße 50
+			4209 Engerwitzdorf
+			Tel. +43 (0) 7235 / 643 17
+			Fax +43 (0) 7235 / 643 17 – 15
+			Email office@project.co.at
+  			</p> 
+		</ul>
+		</div>
+	</div>
+</div>
+</body>
 </html>
