--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <div class="black"></div>
 <div id="wrapper">
 	<div id="header">
-		<h1>PROject Shopfitting</h1>
+		<h1>PROject Shop-Concept</h1>
 		<h2><strong class="sep-one"></strong>Integrierte Leistungen - Hoher Kundennutzen<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
 		<p>PROject PÜHRINGER BISTEGHI HAUER GmbH mit Sitz in Wien und Engerwitzdorf (Linz) arbeitet seit 1995 mit Erfolg in der Beratung, Planung und Realisierung von Organisations- und Investitionsvorhaben.</p> 
-		<p><span>Dies wird die <b>neue Website</b> für das <b>Projektmanagement Shopfitting</b></span></p>
+		<p><span>Dies wird die <b>neue Website</b> für das <b>Projektmanagement Shop-Concept</b></span></p>
 	</div>
 	<div id="footer">
 		<div>
 		<ul class="middle">
 			<p>PROject Pühringer Bisteghi Hauer GmbH Planung und Baumanagement</p>
-			<p>Standort Wien:
+			<p>Standort Wien:<br />
 			Satzberggasse 15/6
 			1140 Wien
 			Tel. +43 (0) 1 / 876 95 99
 			Fax +43 (0) 1 / 876 95 99 – 20
 			Email office.wien@project.co.at
 			</p>
-			<p>Standort Engerwitzdorf:
-			Klammstraße 50
+			<p>Standort Engerwitzdorf:<br />
+			Klammstraße 50,
 			4209 Engerwitzdorf
 			Tel. +43 (0) 7235 / 643 17
 			Fax +43 (0) 7235 / 643 17 – 15
