--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 />
 <title>PROshop</title>
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript" src="tools/jquery.min.js"></script> 
+<script type="text/javascript" src="tools/jquery.min.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 
@@ -13,12 +13,12 @@
 <div class="black"></div>
 <div id="wrapper">
 	<div id="header">
-		<h1>PROject Shop-Concept</h1>
+		<h1>PROject New Shop-Concept </h1>
 		<h2><strong class="sep-one"></strong>Integrierte Leistungen - Hoher Kundennutzen<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>PROject PÜHRINGER BISTEGHI HAUER GmbH mit Sitz in Wien und Engerwitzdorf (Linz) arbeitet seit 1995 mit Erfolg in der Beratung, Planung und Realisierung von Organisations- und Investitionsvorhaben.</p> 
-		<p><span>Dies wird die <b>neue Website</b> für das <b>Projektmanagement Shop-Concept</b></span></p>
+		<p>PROject PÜHRINGER BISTEGHI HAUER GmbH mit Sitz in Wien und Engerwitzdorf (Linz) arbeitet seit 1995 mit Erfolg in der Beratung, Planung und Realisierung von Organisations- und Investitionsvorhaben.</p>
+		<p><span>Dies wird die <b>neue Website</b> für das <b>Neue Projektmanagement Shop-Concept</b></span></p>
 	</div>
 	<div id="footer">
 		<div>
@@ -37,7 +37,7 @@
 			Tel. +43 (0) 7235 / 643 17
 			Fax +43 (0) 7235 / 643 17 – 15
 			Email office@project.co.at
-  			</p> 
+  			</p>
 		</ul>
 		</div>
 	</div>
