--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <div class="black"></div>
 <div id="wrapper">
 	<div id="header">
-		<h1>PROject New Shop-Concept </h1>
+		<h1>PROject Shop-Concept New </h1>
 		<h2><strong class="sep-one"></strong>Integrierte Leistungen - Hoher Kundennutzen<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
 		<p>PROject PÜHRINGER BISTEGHI HAUER GmbH mit Sitz in Wien und Engerwitzdorf (Linz) arbeitet seit 1995 mit Erfolg in der Beratung, Planung und Realisierung von Organisations- und Investitionsvorhaben.</p>
-		<p><span>Dies wird die <b>neue Website</b> für das <b>Neue Projektmanagement Shop-Concept</b></span></p>
+		<p><span>Dies wird die <b>neu geplante Website</b> für das <b> Projektmanagement Shop-Concept</b></span></p>
 	</div>
 	<div id="footer">
 		<div>
