--- a/index.html
+++ b/index.html
@@ -13,31 +13,24 @@
 <div class="black"></div>
 <div id="wrapper">
 	<div id="header">
-		<h1>PROject Shop-Concept New </h1>
-		<h2><strong class="sep-one"></strong>Integrierte Leistungen - Hoher Kundennutzen<strong class="sep-two"></strong></h2>
+		<h1>Maintenance - Wartung</h1>
+		<h2><strong class="sep-one"></strong>This service is temporarly unavailable.<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>PROject PÜHRINGER BISTEGHI HAUER GmbH mit Sitz in Wien und Engerwitzdorf (Linz) arbeitet seit 1995 mit Erfolg in der Beratung, Planung und Realisierung von Organisations- und Investitionsvorhaben.</p>
-		<p><span>Dies wird die <b>neu geplante Website</b> für das <b> Projektmanagement Shop-Concept</b></span></p>
+		<p>We are currently performing scheduled maintenance.</p>
+		<p>Normal service will be restored soon.</p>
+		<p><span><b>Dieser Dienst steht vorübergehend nicht zur Verfügung.</b><br />
+			Wir führen derzeit geplante Wartungsarbeiten durch.<br />
+			Der normale Betrieb wird baldmöglichst wieder hergestellt.</b></span></p>
 	</div>
 	<div id="footer">
 		<div>
 		<ul class="middle">
-			<p>PROject Pühringer Bisteghi Hauer GmbH Planung und Baumanagement</p>
-			<p>Standort Wien:<br />
-			Satzberggasse 15/6
-			1140 Wien
-			Tel. +43 (0) 1 / 876 95 99
-			Fax +43 (0) 1 / 876 95 99 – 20
-			Email office.wien@project.co.at
+			<p></p>
+			<p><br />
 			</p>
-			<p>Standort Engerwitzdorf:<br />
-			Klammstraße 50,
-			4209 Engerwitzdorf
-			Tel. +43 (0) 7235 / 643 17
-			Fax +43 (0) 7235 / 643 17 – 15
-			Email office@project.co.at
-  			</p>
+			<p><br />
+			</p>
 		</ul>
 		</div>
 	</div>
