--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>PROshop</title>
+<title>priecons.github.io</title>
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
 <script type="text/javascript" src="tools/jquery.min.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700|Damion' rel='stylesheet' type='text/css'>
